<resources>
    <string name="app_name">MedKit</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fullName">Full name</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="existAccount">Already have a account? Login</string>
    <string name="dontHaveAccount">New here? Create Account</string>
    <string name="login">Login</string>
    <string name="logout">LogOut</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="capture_picture">Capture picture</string>
    <string name="upload_picture">Upload picture</string>
    <string name="save_picture">Save picture</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="type">Type:</string>
    <string name="dose">Dose:</string>
    <string name="warning">Warning:</string>
    <string name="usage">Usage:</string>
    <string name="price">Price:</string>
    <string name="symptoms">Symptoms:</string>
    <string name="categories">CATEGORIES</string>
    <string name="category">Category:</string>
</resources>