<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.PictureActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_picture"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_picture"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/savePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_picture"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</layout>