<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="drug"
            type="veljkojaksic.medkit.functionality.DrugModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activities.DrugInformationActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{drug.name}"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{drug.manufacturer}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{drug.type}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dose"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{drug.dose}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{drug.warning}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usage"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{drug.usage}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{drug.price}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</layout>